ESQL: Fix data type of partial folded CASE
When partially fold something like:
```
CASE(false, "a", null)
```

We'd emit it as `null` with the `NULL` data type. But that'll break
aggs! They expect to never receive a `NULL` data type. They are *fine*
getting `null` of any other data type.

We've had that bug for a long time, but it never surfaced until #145968
landed. And, boy, is it exciting how it comes out! Specifically, you
need:
```
CASE(constant_keyword == "mismatch" AND severity > 0, field, null)
```

The rules would mostly just fold the whole thing to NULL and work,
except if:
1. It folds on the data node - like constant_keyword
2. It contains an AND in the condition
3. `field` is mapped locally
4. The CASE ends in an explicit trailing `null`.

If all of these are true, then the replacement wouldn't happen on the
coordinating node at all. On the data node you'll get:

* `ReplaceFieldWithConstantOrNull` substitutes the constant_keyword
  field with its per-shard literal value and any absent fields
  (`severity` above) with `null[INTEGER]`.
```
CASE("login" == "mismatch" AND null > 0, field, null)
```

* `ConstantFolding` folds the inner parts to:
```
CASE(false AND null, field, null)
```
  It cannot fold the whole CASE, though: `Case.foldable()` returns `false`
  because the condition is a foldable-but-non-Literal `And(...)` expression
  while the then-value is a non-foldable `FieldAttribute`.

* `PartiallyFoldCase` fires in the same pass and folds the condition. So
  it sees:
```
CASE(false, field{f}, null)
```
  It strips the dead `(false, field)` pair, leaving only `null` with the
  data_type `NULL`.

That `null[NULL]` then flows into `CountDistinct.supplier` which throws
`EsqlIllegalArgumentException: illegal data type [null]`, crashing the
shard. The query returns partial results from the surviving shards.

Before #145968 the `ConstantFolding` would fold the whole thing in one
go, all the way to a literal `null` with the data type of whatever the
whole CA